=== 2.1.0 / 2017-XX-XX

* Added firewall API methods (Samu Voutilainen)
* Added tagging API methods (Samu Voutilainen)
* Updated documentation (Samu Voutilainen)
* Added IP related API methods (Samu Voutilainen)
* Added prices API method (Samu Voutilainen)

=== 2.0.0 / 2017-01-27

* Changed servers method to return storages inside an array instead of { "storages" => { "storage" => [] } } hash. (Samu Voutilainen)
* Improved documentation (Samu Voutilainen)
* Changed storage_details() to return hash without wrapper hash (Samu Voutilainen)
* Ensured stop_server will return nil in case of error in stopping (Samu Voutilainen)
* Changed server_details() to return details hash directly and documented the method properly (Samu Voutilainen)
* Removed templates method. storages(type: "template") can be used instead. (Samu Voutilainen)
* Added plan option to create_server() (Samu Voutilainen)
* Added plans() for getting preconfigured plans (Samu Voutilainen)
* Added login_user option to create_server() (Samu Voutilainen)
* Added support for optional extra arguments to create_server() (Samu Voutilainen)

=== 1.5.0 / 2016-04-22

* Added some new methods and unit tests + some minor changes, including style fixes suggested by rubocop (TargetRubyVersion: 2.2) (Mika Katara)

=== 1.4.0 / (never released)

* Added configuration option for choosing which IPs will be created with create_server()

=== 1.3.0 / 2015-05-13

* Actions for storage management (Samu Voutilainen)

=== 1.2.0 / 2015-05-11

* Added stop_server and restart_server (Samu Voutilainen)

=== 1.1.0 / 2015-05-07

* Make create_server more sane (Samu Voutilainen)

=== 1.0.1 / 2015-05-07

* Fix a syntax error... (Samu Voutilainen)

=== 1.0.0 / 2015-05-07

* First release (Samu Voutilainen)