@@ -5,6 +5,7 @@
 * Updated documentation (Samu Voutilainen)
 * Added IP related API methods (Samu Voutilainen)
 * Added prices API method (Samu Voutilainen)
+* Added zones API method (Samu Voutilainen)
 
 === 2.0.0 / 2017-01-27
 
